apps/platform/entitlements-api/manifests/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-entitlements-api
spec:
  selector:
    app.kubernetes.io/name: platform-entitlements-api
  ports:
    - name: http
      port: 8080
      targetPort: http
